UPDATED THE FORM TO INCLUDE ALL THE PARAMS NEEDED TO MAKE A USER OBJECT IN THE DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/users
+spring.datasource.url=jdbc:mysql://localhost:3306/ForexFighter_Test_2
 spring.datasource.username=root
 spring.datasource.password=R00t**
 
