--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
 			<artifactId>spring-security-core</artifactId>
 			<version>4.1.3.RELEASE</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20160810</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
