--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "angular": "^1.5.8",
+    "angular": "1.5.8",
     "angular-chart.js": "^1.0.3",
     "angular-cookies": "^1.5.8",
     "angular-route": "^1.5.8",
