--- a/pom.xml
+++ b/pom.xml
@@ -70,8 +70,7 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.1.4</version>
-		</dependency>
-		<dependency>
+		</dependency><dependency>
 
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
