--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -15,6 +15,9 @@
     "angular-route": "^1.5.8",
     "angular-sanitize": "^1.5.8",
     "angular-ui-router": "^0.3.1",
+    "angular-animate": "1.5.8",
+    "angular-aria": "1.5.8",
+    "angular-material": "^1.1.3",
     "bootstrap": "^3.3.7",
     "chart": "^0.1.2",
     "chart.js": "^2.3.0",
