--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -32,5 +32,8 @@
     "load-grunt-tasks": "^3.5.2",
     "lodash": "^4.16.4",
     "simple-line-icons": "^2.4.1"
+  },
+  "dependencies": {
+    "snackbarjs": "^1.1.0"
   }
 }
